# linpac

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  cleanall.sh  config.h.in  configure  configure.ac  configure.in  generate-ChangeLog.sh  linpac-todo.txt  linpac.lsm
.github/workflows/: dockerimage.yml
contrib/: Makefile.am  linpac-check-msgs.sh  start-linpac.sh
contrib/packaging/dockerfile/: try-all.sh
contrib/packaging/dockerfile/debian/: Dockerfile
contrib/packaging/dockerfile/fedora/: Dockerfile
contrib/packaging/dockerfile/ubuntu/: Dockerfile
contrib/packaging/rpm/: linpac-0.20.spec  linpac.spec
ctt/: Makefile.am  Makefile.in
data/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in  applguide.html  applguide.txt  events.txt  ioctl.txt  manual.html  manual.txt  objects.txt
doc/charsets/: Makefile.am  Makefile.in  ctt_files.txt
doc/czech/: Makefile.am  Makefile.in  cti.me  klavesnice.txt  makra.txt  prikazy.txt  stanice.txt
inst/: Makefile.am  Makefile.in  linpac  linpac.in
macro/: Makefile.am  Makefile.in  help.mac  init.mac
macro/cz/: Makefile.am  Makefile.in
macro/de/: Makefile.am  Makefile.in
macro/en/: Makefile.am  Makefile.in
macro/fr/: Makefile.am  Makefile.in
macro/pl/: Makefile.am  Makefile.in
macro/sk/: Makefile.am  Makefile.in
mail/: Makefile.am  Makefile.in  archive_mail  delmsg.pl  delmsg.pl.in  pack.pl  pack.pl.in
plugins/: Makefile.am  Makefile.in  pkgs  update-0.14  update-0.16
src/: Makefile.am  Makefile.in  calls.cc  calls.h  commands.cc  commands.h  comp.cc  comp.h  constants.h  data.cc  data.h  editor.cc  editor.h  evaluate.cc  evaluate.h  event.cc  event.h  evqueue.cc  evqueue.h  hash.c  infoline.cc  infoline.h  keyboard.cc  keyboard.h  linpac.cc  names.cc  names.h  screen.cc  screen.h  sounds.cc  sounds.h  sources.cc  sources.h  status.cc  status.h  t_queue.h  t_stack.h  tevent.h  tools.cc  tools.h  (+5 more)
src/applications/: .gitignore  Makefile.am  Makefile.in  autobin.cc  bell.cc  catch.cc  commands  compose.cc  crc.cc  doorbl.h  dostime.h  flexpwd.cc  forward.cc  getmsg.cc  hash.h  join.c  kill_chn  logbook.cc  lpbck.cc  lpcalls.h  lpwin.h  md2.cc  md2.h  md2pwd.cc  md5.h  md5pwd.cc  mheard  name.cc  pack  rawio.cc  rtt.cc  save7pl.cc  sendfile  shell  testapp.c  tnpwd.cc  w  yapp.cc
src/applications/libaxmail/: Makefile.am  Makefile.in  axmail.cc  axmail.h  calls.cc  calls.h  parser.cc  parser.h
src/applications/liblinpac/: Makefile.am  Makefile.in  lpapp.c  tevent.h
src/applications/lpapi/: Makefile.am  Makefile.in  lpapi.cc
src/applications/mailer/: Makefile.am  Makefile.in  lpapp.h  mail.cc  mail_call.cc  mail_call.h  mail_comp.cc  mail_comp.h  mail_data.cc  mail_data.h  mail_edit.cc  mail_edit.h  mail_files.cc  mail_files.h  mail_filt.cc  mail_filt.h  mail_help.cc  mail_help.h  mail_input.cc  mail_input.h  mail_list.cc  mail_list.h  mail_route.cc  mail_route.h  mail_screen.cc  mail_screen.h
src/applications/mailmsg/: Makefile.am  bbs.cc  bbs.h  bbs_fbb.cc  bbs_fbb.h  bbs_pbbs.cc  bbs_pbbs.h  delmsg  forward.cc  getmail  getmsg.cc  lzhuf.cc  lzhuf.h
