## Process this file with automake to produce Makefile.in

SUBDIRS = cz en pl fr sk de

macrodir = $(pkgdatadir)/macro/
dist_macro_DATA = activity.mac color_default.mac conv.mac info.mac quit.mac \
	    cexit.mac color_tnt.mac ctext.mac init.mac sb.mac cinit.mac \
	    comp.mac help.mac pas.mac sp.mac color_blue.mac connect.mac \
	    home.mac pw.mac users.mac commands

