## process this file with automake to produce Makefile.in

includedir=@includedir@/linpac
#libdir=/usr/local/lib
LIBS=
include_HEADERS = axmail.h
lib_LTLIBRARIES = libaxmail.la
libaxmail_la_SOURCES = axmail.cc calls.cc parser.cc
libaxmail_la_LDFLAGS = -version-info 0:0:0
EXTRA_DIST = calls.h parser.h
